@@ -954,7 +954,7 @@ function KM:Start()
 	self.Prince.Triggers.Terminate = KBM.Trigger:Create(KM.Lang.Ability.Terminate[KBM.Lang], "cast", self.Prince)
 	self.Prince.Triggers.Terminate:AddTimer(self.Prince.TimersRef.Terminate)
 	self.Prince.Triggers.Terminate:AddAlert(self.Prince.AlertsRef.Terminate)
-	self.Prince.Triggers.Consuming = KBM.Trigger:Create(KM.Lang.Ability.Terminate[KBM.Lang], "cast", self.Prince)
+	self.Prince.Triggers.Consuming = KBM.Trigger:Create(KM.Lang.Ability.Consuming[KBM.Lang], "cast", self.Prince)
 	self.Prince.Triggers.Consuming:AddTimer(self.Prince.TimersRef.Consuming)
 	self.Prince.Triggers.Consuming:AddAlert(self.Prince.AlertsRef.Consuming)
 	self.Prince.Triggers.Runic = KBM.Trigger:Create(KM.Lang.Ability.Runic[KBM.Lang], "cast", self.Prince)
